Sat Sep  3 2011 Aleksey
	* Bugfix: not enough trailing '=' in a base64-encoded hash

Sat Aug 20 2011 Aleksey
	* Bugfix: fix broken --openssl option parsing
	* Bugfix: buffer overflow when using --embed-crc-delimiter
	* Bugfix: segmentation fault on SUSE Linux

Sun Aug 14 2011 Aleksey
	* === Version 1.2.7 ===

Sun Aug  7 2011 Aleksey
	* Bugfix: percents option was broken in v1.2.6

Fri Aug  5 2011 Aleksey
	* supported verification of sha256, sha512 and other hash sums

Mon Jul 11 2011 Aleksey
	* librhash: rhash_cancel() macro to cancel hashing from another thread

Fri Jun 24 2011 Aleksey
	* Bugfix: repaired default output encoding to be UTF-8 on Windows

Wed Jun 22 2011 Aleksey
	* Bugfix: crash on WinXP

Thu Jun 16 2011 Aleksey
	* === Version 1.2.6 ===

Sat Jun 11 2011 Aleksey
	* allowed options to be intermixed with file names in arbitrary order
	* switched option -G and the '%G' printf pattern to print GOST hash
	* Bugfix: --output failed for cyrillic file name

Wed Jun  8 2011 Aleksey
	* librhash: better shared library compilation/testing support

Mon Jun  6 2011 Aleksey
	* librhash: exported benchmarking functions in the shared library
	* librhash: added prefix to all functions to avoid poluting linker namespace
	* librhash: fixed rare alignment bugs in rhash_print and EDON-R 512

Sat May 28 2011 Aleksey
	* librhash: loading openssl at runtime if it is present
	* Bugfix: LLVM GOST amd64 asm compilation error

Wed May 18 2011 Aleksey
	* === Version 1.2.5 ===
	* option --openssl allows to replace some algorithms by the OpenSSL ones
	* Bugfix: incorrect recursive traversing of very long UTF-8 filepaths

Wed Apr 27 2011 Aleksey
	* Bugfix: corrected calculation of BTIH hash and torrent files

Fri Apr 15 2011 Aleksey
	* === Version 1.2.4 ===
	* option --benchmark-raw for machine-readable benchmark output format
	* on Intel/AMD CPUs benchmark now prints the clocks-per-byte value

Tue Apr  5 2011 Aleksey
	* changed config file locations

Fri Apr  1 2011 Aleksey