@@ -63,7 +63,8 @@ typedef struct rhash_context
 	unsigned long long msg_size;
 	unsigned hash_id;
 	unsigned hash_vector_size; /* number of contained hash sums */
-	unsigned long state;
+	unsigned flags;
+	unsigned state;
 	void *callback, *callback_data;
 	void *bt_ctx;
 	rhash_vector_item vector[1]; /* contexts of contained hash sums */
@@ -151,6 +152,8 @@ RHASH_API rhash_uptr_t rhash_transmit(unsigned msg_id, void*dst, rhash_uptr_t ld
 #define RMSG_GET_CONTEXT 1
 #define RMSG_CANCEL      2
 #define RMSG_IS_CANCELED 3
+#define RMSG_GET_FINALIZED 4
+#define RMSG_SET_AUTOFINAL 5
 #define RMSG_SET_OPENSSL_MASK 10
 #define RMSG_GET_OPENSSL_MASK 11
 
@@ -169,6 +172,8 @@ RHASH_API rhash_uptr_t rhash_transmit(unsigned msg_id, void*dst, rhash_uptr_t ld
 #define rhash_get_context_ptr(ctx, hash_id) RHASH_UPTR2PVOID(rhash_transmit(RMSG_GET_CONTEXT, ctx, hash_id, 0))
 #define rhash_cancel(ctx) rhash_transmit(RMSG_CANCEL, ctx, 0, 0)
 #define rhash_is_canceled(ctx) rhash_transmit(RMSG_IS_CANCELED, ctx, 0, 0)
+#define rhash_get_finalized(ctx, on) rhash_transmit(RMSG_GET_FINALIZED, ctx, 0, 0)
+#define rhash_set_autofinal(ctx, on) rhash_transmit(RMSG_SET_AUTOFINAL, ctx, on, 0)
 
 /* set the mask of algorithms to be used from openssl library */
 #define rhash_set_openssl_mask(mask) rhash_transmit(RMSG_SET_OPENSSL_MASK, NULL, mask, 0);
