@@ -1,3 +1,6 @@
+Tue Sep  6 2011 Aleksey
+	* librhash: implemented auto-final feature, turned on by default
+
 Sat Sep  3 2011 Aleksey
 	* Bugfix: not enough trailing '=' in a base64-encoded hash
 
